objects/docebo_v3__DoceboUser__c.object
<CustomObject>
    <description>Represent a Docebo User.</description>
    <fields>
        <fullName>docebo_v3__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Salesforce standard Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Docebo Users</relationshipLabel>
        <relationshipName>DoceboUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>docebo_v3__UserId__c</fullName>
        <description>LMS user id.</description>
        <externalId>true</externalId>
        <label>User Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Salesforce standard User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Docebo Users</relationshipLabel>
        <relationshipName>DoceboUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Who__c</fullName>
        <description>A Contact, User or CO Salesforce Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Who</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Docebo User</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>NAME</columns>
        <columns>docebo_v3__User__c</columns>
        <columns>docebo_v3__UserId__c</columns>
        <columns>docebo_v3__Who__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Docebo User Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docebo Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>docebo_v3__CannotReferenceMultipleObjects</fullName>
        <active>false</active>
        <description>This avoids that a docebo users is linked to more than one SFDC entity</description>
        <errorConditionFormula>IF (docebo_v3__User__c != NULL &amp;&amp; docebo_v3__Contact__c != null, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Docebo Users cannot have multiple related entities, they must be associated with either a User, a Contact or a custom object.</errorMessage>
    </validationRules>
</CustomObject>